--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+        command: [ "echo", "SUCCESS" ]
 
 ---
 
